--- a/templates/index.html
+++ b/templates/index.html
@@ -7,9 +7,12 @@
     <script>
         function start() {
             let name = document.getElementById("name").value;
-            window.location.replace(`/game?id=${name}`);
-        }
+            let room = document.getElementById("roomID").value;
+            window.location.replace(`/game?id=${name}&roomID=${room}`);
+      }
     </script> <input type="text" size="40" id="name"><br>
+    <br>
+    <input type="text" size="40" id="roomID"><br>
     <button onclick="start()">Начать игру</button><br>
 </body>
 </html>
