--- a/templates/index.html
+++ b/templates/index.html
@@ -9,10 +9,13 @@
             let name = document.getElementById("name").value;
             let room = document.getElementById("roomID").value;
             window.location.replace(`/game?id=${name}&roomID=${room}`);
-      }
-    </script> <input type="text" size="40" id="name"><br>
+    }
+    </script> <label for="name">Имя игрока:</label> <input type=
+    "text" size="40" id="name"><br>
     <br>
-    <input type="text" size="40" id="roomID"><br>
-    <button onclick="start()">Начать игру</button><br>
+    <label for="name">Имя комнаты:</label> <input type="text" size=
+    "40" id="roomID"><br>
+    <br>
+    <button onclick="start()">Начать игру</button>
 </body>
 </html>
