Fix RoomID name in html

--- a/templates/game.html
+++ b/templates/game.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <p>Игрок {{ .ID }}</p>
-    <p>Комната {{ .roomID }}</p>
+    <p>Комната {{ .RoomID }}</p>
     <p><label id="status"></label></p>
     <div class="rd_choice">
         <input type="radio" name="choice" id="choicePaper" value=
